    disappear. Now the differences between ordinary streams and CLOS
    streams are handled in file.d. Optimizations for synonym streams
    also disappear from read.d and print.d.

  - All information used by FORMAT is kept in stack-allocated
    structures. Now FORMAT is reentrant and can be safely called from
    within PRINT-OBJECT.

* Visible changes and ANSI compatibility:

  - New configuration flag --with-clos-streams, enable the user to
    define CLOS objects which behave as lisp streams. Such object must
    have the following methods defined: STREAM-INPUT-P,
    STREAM-OUTPUT-P, STREAM-READ-CHAR, STREAM-UNREAD-CHAR,
    STREAM-LISTEN, STREAM-CLEAR-INPUT, STREAM-WRITE-CHAR,
    STREAM-CLEAR-OUTPUT, STREAM-FORCE-OUTPUT, STREAM-CLOSE.

  - LOAD accepts now a stream as input parameter. However, in this
    case it only tolerates lisp source files, not compiled files or
    libraries. For example, (LOAD (OPEN "foo.lsp")) is equivalent
    to (LOAD "foo.lsp").

  - The arguments of GENSYM should not be remembered by ECLS. The
    current behaviour is wrong:
		> (gensym)
		#:G36
		> (gensym "F")
		#:F37
		> (gensym)
		#:F38

TODO:
=====

* Selectively remove spices from read.d and object.h

* Implement memory collection based on mmap()

* Improve the garbage collector using kernel information about dirty
  pages.

* Improve fixnum_times.

* #'unread-char does not fail when the character differs from the
  original one.

* vector-push-extend may succeed even if the vector is not
  adjustable. Should we be more strict?

* should we relax ASSOC? (See lists156.tst)

* boost setf and generalized places -- the current implementation is
  extremely faulty with respect to the standards.

* expand parse_namestring() to accept scaped strings, spaces, etc.

* Remove most property lists from standard symbols.

* Make the version with Boehm's GC and the version without it binary
  compatible.

;;; Local Variables: ***
;;; mode:text ***
;;; fill-column:70 ***
;;; End: ***